--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "homepage": ".",
   "engines": {
-    "node": "8.11.1"
+    "node": "15.9.0",
+    "npm": "1.4.29"
   },
   "dependencies": {
     "@truffle/hdwallet-provider": "1.1.0",
