--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "private": true,
   "homepage": ".",
   "engines": {
-    "node": "10.15.0",
-    "npm": "6.4.1"
+    "node": "8.11.1"
   },
   "dependencies": {
     "@truffle/hdwallet-provider": "1.1.0",
@@ -49,7 +48,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "(set PORT=process.env.PORT || export PORT=process.env.PORT) &&  react-app"
   },
   "browserslist": [
     ">0.2%",
