--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "homepage": ".",
   "engines": {
-    "node": "8.11.1"
+    "node": "8.11.1",
+    "npm": "5.6.0"
   },
   "dependencies": {
     "@truffle/hdwallet-provider": "1.1.0",
